# logic-trace-parser

./: .gitignore  Cargo.toml  Readme.md
src/: logic_sample.rs  logicdata_parser.rs  main.rs  sample.rs  serial.rs  spi.rs  spif.rs  vcd_parser.rs  wizfi310.rs
